# 22.0

./: .gitignore  pyproject.toml
catalog/templates/: contacts.html  home.html
config/: settings.py
newapp/: urls.py  views.py
newapp/templates/: contacts.html
